The DJ project - Sweet
http://djproject.sourceforge.net
Christopher Deckers (chrriis@nextencia.net)
Licence terms: LGPL (see licence.txt)

---------------------------------- Change log ----------------------------------

* Version 0.9.9 (xxxxxxxxxxxxxx):

- Web Browser type and version are accessible.
- HTML Editor options format is changed (cf demo application for new format).
- HTML Editor has a CKEditor implementation.
- Commands can be sent from browser using sendNSCommand JS function.
- Browser/Flash player commands and arguments do not have a size limit.
- Browser/Flash player commands now take Object[] as params.
- JFlashPlayer content can access host files.
- Browser-based object can have their background set (for transparent content).
- Flash/VLC options are not set to null after load to support multiple requests.
- VLC player now allows VLC options.
- VLC API improved to work with 1.0.0.
- VLC and Flash player do not have a loading message (was causing problems).
- F5 is blocked for plugin based objects to avoid page reload.
- Web server allows to plug content providers.
- Relative local files can be loaded by the web server.
- JS line comments and escaping are removed for browsers where it is not needed.
- Browser window size was incorrectly set if JS specified only width or height.
- Exposed System properties are in enum classes. Some system properties changed.


* Version 0.9.8 (March 24, 2009):

- Cookie management is added to the browser.
- Javascript can be enabled/disabled for subsequently viewed pages.
- Default web server can be stopped.
- Some clean up is done for WebBrowserObject internal object registry. 
- JFlashPlayer flashvars are properly encoded.
- Local host address is in Utils (was in WebServer) and is auto-detected.


* Version 0.9.7 (December 9, 2008):

- DJ Sweet is a pure SWT port of DJ NativeSwing 0.9.7.
- Updated VLC API to latest (0.9.6).