@@ -21,6 +21,7 @@ Licence terms: LGPL (see licence.txt)
 - VLC and Flash player do not have a loading message (was causing problems).
 - F5 is blocked for plugin based objects to avoid page reload.
 - Web server allows to plug content providers.
+- Web server can pass HTTP headers for dynamic content.
 - Relative local files can be loaded by the web server.
 - JS line comments and escaping are removed for browsers where it is not needed.
 - Browser window size was incorrectly set if JS specified only width or height.
